--- a/resources/assets/sass/layout/_footer.scss
+++ b/resources/assets/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
 
-    .footer__navigation {
+    &__navigation {
         border-top: 1px solid $border-1;
         background: $background-1;
         border-bottom: 1px solid $border-1;
@@ -29,9 +29,9 @@
         }
     }
 
-    .footer__copyright {
+    &__copyright {
         text-align: center;
-        
+
         .powered-by {
             clear: both;
             font-size: 0.8em;
@@ -39,7 +39,8 @@
             padding: 0 0 20px 0;
             margin: 0;
 
-            .powered-by__link {
+            &__link:link,
+            &__link:visited {
                 color: $alt-font-color-1;
             }
         }
