--- a/resources/assets/sass/layout/_menus.scss
+++ b/resources/assets/sass/layout/_menus.scss
@@ -1,12 +1,12 @@
 .menu-bar {
 
-    .menu-bar__links {
+    &__links {
         margin: 0;
         padding: 0;
         list-style: none;
     }
 
-    .menu-bar__links__item__link {
+    &__item__link {
         display: block;
         margin-bottom: 10px;
         padding: 8px 0;
@@ -46,14 +46,14 @@
         width: 19%;
         margin-#{$right}: 3%;
     }
-    
-    .section-menu__links {
+
+    &__links {
         @include clearfix();
         margin: side-values(0 0 15px 0);
         padding: 0;
         list-style: none;
 
-        .section-menu__links__item {
+        &__item {
             float: $left;
             width: 48%;
             margin-bottom: 4px;
@@ -66,14 +66,19 @@
                 margin-#{$left}: 2%;
             }
 
-            .section-menu__links__item__link {
+            &__link {
                 background: $background-1;
                 display: block;
                 padding: 2px 8px;
-                text-decoration: none;
                 border-radius: 3px;
 
-                &:hover {
+                &:link,
+                &:visited {
+                    text-decoration: none;
+                }
+
+                &:hover,
+                &:active {
                     background-color: $secondary-color;
                     border-color: $secondary-color;
                     color: $invert-font-color;
@@ -81,7 +86,7 @@
             }
 
             &.section-menu__links__item--active {
-                
+
                 .section-menu__links__item__link {
                     background-color: $primary-color;
                     border-color: $primary-color;
