--- a/resources/assets/sass/pages/_polls.scss
+++ b/resources/assets/sass/pages/_polls.scss
@@ -1,5 +1,5 @@
 .add-poll {
-    
+
     .poll-option {
         padding-#{$right}: 20px;
     }
@@ -17,18 +17,18 @@
     border-radius: 4px;
     margin-bottom: 20px;
 
-    .poll__title {
+    &__title {
         font-size: 1.2em;
         font-weight: bold;
         padding: 8px 12px;
         border-bottom: 1px solid $border-2;
     }
 
-    .poll__options {
+    &__options {
         padding: 0;
     }
 
-    .poll__option {
+    &__option {
         border-bottom: 1px solid $border-1;
         padding: 10px 12px;
         @include clearfix();
@@ -40,61 +40,61 @@
                 font-weight: bold;
             }
         }
-    }
 
-    .poll__option__name {
-        margin-bottom: 8px;
+        &__name {
+            margin-bottom: 8px;
 
-        @include bp-medium {
-            width: 50%;
+            @include bp-medium {
+                width: 50%;
+                float: $left;
+                margin-bottom: 0;
+            }
+        }
+
+        &__votes {
+            width: 80%;
             float: $left;
-            margin-bottom: 0;
+            position: relative;
+            border: 1px solid $border-3;
+            background: $background-default;
+            height: 24px;
+            box-sizing: border-box;
+            border-radius: 4px;
+
+            @include bp-medium {
+                width: 40%;
+                float: $left;
+            }
+
+            &--result {
+                font-size: 14px;
+            }
+
+            &__bar {
+                position: absolute;
+                top: 0;
+                #{$left}: 0;
+                bottom: 0;
+                background: $primary-color;
+                z-index: 1;
+                border-radius: 3px;
+            }
         }
-    }
 
-    .poll__option__votes {
-        width: 80%;
-        float: $left;
-        position: relative;
-        border: 1px solid $border-3;
-        background: $background-default;
-        height: 24px;
-        box-sizing: border-box;
-        border-radius: 4px;
-
-        .poll__option__votes__bar {
-            position: absolute;
-            top: 0;
-            #{$left}: 0;
-            bottom: 0;
-            background: $primary-color;
-            z-index: 1;
-            border-radius: 3px;
-        }
-
-        @include bp-medium {
-            width: 40%;
+        &__count {
             float: $left;
+            width: 18%;
+            margin-#{$left}: 2%;
+            font-size: 0.9em;
+
+            @include bp-medium {
+                width: 8%;
+                float: $left;
+            }
         }
     }
 
-    .poll__option__count {
-        float: $left;
-        width: 18%;
-        margin-#{$left}: 2%;
-        font-size: 0.9em;
-
-        @include bp-medium {
-            width: 8%;
-            float: $left;
-        }
-    }
-
-    .poll__option__votes--result {
-        font-size: 14px;
-    }
-
-    .poll__vote {
+    &__vote {
         padding: 12px 0 0 0;
 
         .poll__buttons {
@@ -102,7 +102,7 @@
         }
     }
 
-    .poll__end-date {
+    &__end-date {
         font-size: 0.9em;
         color: $alt-font-color-1;
         padding: 5px 16px 0 16px;
@@ -113,7 +113,7 @@
         }
     }
 
-    .poll__closed {
+    &__closed {
         background: $danger-color;
         color: $invert-font-color;
         display: inline-block;
