--- a/resources/assets/sass/pages/_profile.scss
+++ b/resources/assets/sass/pages/_profile.scss
@@ -1,6 +1,6 @@
 .profile {
 
-    .profile__header {
+    &__header {
         @include clearfix();
         position: relative;
         margin-bottom: 20px;
@@ -13,11 +13,11 @@
         }
     }
 
-    .profile__content {
+    &__content {
         margin-top: 20px;
     }
 
-    .profile__sidebar {
+    &__sidebar {
         margin-top: 20px;
     }
 
@@ -30,30 +30,30 @@
         }
     }
 
-    .profile__username,
-    .profile__usertitle {
+    &__username,
+    &__usertitle {
         margin: 5px 0;
     }
 
-    .profile__field-group {
+    &__field-group {
 
-        .profile__field-group__title {
+        &__title {
             margin-bottom: 0;
         }
     }
 
-    .profile__field {
+    &__field {
         padding: 8px;
         border-bottom: 1px solid $border-1;
         font-size: 0.9em;
 
-        .profile__field__title {
+        &__title {
             margin: 0;
             padding: 0;
             font-weight: 600;
         }
 
-        .profile__field__data {
+        &__data {
             margin: 0;
             padding: 0;
         }
