--- a/resources/assets/sass/pages/_user-list.scss
+++ b/resources/assets/sass/pages/_user-list.scss
@@ -2,7 +2,7 @@
     @include clearfix();
     padding: side-values(12px 12px 0 12px);
 
-    .user-list__user {
+    &__user {
         border: 1px solid $border-1;
         padding: 8px;
         margin: side-values(0 0 12px 0);
@@ -29,18 +29,18 @@
             @include avatar(80);
         }
 
-        .user-list__user__username {
+        &__username {
             margin: 0;
             font-size: 1em;
         }
 
-        .user-list__user__user-title {
+        &__user-title {
             font-size: 0.8em;
             font-weight: normal;
             margin: 0;
         }
 
-        .user-list__user__data {
+        &__data {
             margin: 0;
             padding: 0;
             font-size: 0.8em;
@@ -63,41 +63,41 @@
         }
     }
 
-    &.user-list--online-now {
-        
+    &--online-now {
+
         .user-list__user {
-            
+
             .avatar-profile-link {
                 @include avatar(50);
             }
 
-            .user-list__user__date {
+            &__date {
                 float: right;
-            }   
+            }
         }
     }
 
     .sort-results {
         margin: side-values(0 -12px 0 -12px);
     }
-}
 
-.user-list--compact {
+    &--compact {
 
-    .user-list--compact__user {
-        display: inline-block;
-        margin: side-values(0 12px 10px 0);
+        &__user {
+            display: inline-block;
+            margin: side-values(0 12px 10px 0);
 
-        .avatar {
-            width: 24px;
-            height: 24px;
-            margin: side-values(-2px 8px 0 0);
+            .avatar {
+                width: 24px;
+                height: 24px;
+                margin: side-values(-2px 8px 0 0);
+            }
         }
-    }
 
-    .error-no-results {
-        padding: 10px 0;
-        font-size: 1em;
+        .error-no-results {
+            padding: 10px 0;
+            font-size: 1em;
+        }
     }
 }
 
