--- a/resources/views/forum/show.twig
+++ b/resources/views/forum/show.twig
@@ -123,8 +123,8 @@
                                 </h3>
                                 <h4 class="topic__first-post__title">{{ trans('topic.firstpost') }}</h4>
                                 <p class="topic__first-post topic__post topic__post--first">
-                                    <span class="post__author">{{ render_profile_link(topic.author) }}</span>
-                                    {{ post_date_link(url_route('topics.last', {'slug': topic.slug, 'id': topic.id}), topic.created_at) }}
+                                    <span class="topic__post__author">{{ render_profile_link(topic.author) }}</span>
+                                    {{ post_date_link(url_route('topics.last', {'slug': topic.slug, 'id': topic.id}), topic.created_at, 'topic__post__date') }}
                                 </p>
                             </div>
                             <div class="replies-column topic__replies">
@@ -137,10 +137,10 @@
                                 <!-- it should be change later -->
                                 <a href="" class="avatar-profile-link" title="Go to {{ topic.lastPost.author.name }}'s profile"><img src="{{ topic.lastPost.author.avatar }}" alt="{{ topic.lastPost.author.name }}'s avatar" class="avatar" /></a>
                                 <p class="topic__latest-post__post topic__post topic__post--latest">
-                                    <span class="post__author">
+                                    <span class="topic__post__author">
                                         {{ render_profile_link(topic.lastPost.author) }}
                                     </span>
-                                    {{ post_date_link(url_route('topics.last', {'slug': topic.slug, 'id': topic.id}), topic.lastPost.created_at) }}
+                                    {{ post_date_link(url_route('topics.last', {'slug': topic.slug, 'id': topic.id}), topic.lastPost.created_at, 'topic__post__date') }}
                                 </p>
                             </div>
                             <!-- this needs to be hidden if user is not a moderator -->
