--- a/public/assets/css/rtl.css
+++ b/public/assets/css/rtl.css
@@ -4955,7 +4955,7 @@ dl.stats dd {
   list-style: none;
 }
 
-.menu-bar__item__link {
+.menu-bar__links__item__link {
   display: block;
   margin-bottom: 10px;
   padding: 8px 0;
@@ -4969,7 +4969,7 @@ dl.stats dd {
 }
 
 @media only screen and (min-width: 768px) {
-  .menu-bar__item__link {
+  .menu-bar__links__item__link {
     width: auto;
     background: none;
     border-right: 1px solid #dfdfdf;
