--- a/public/assets/css/rtl.css
+++ b/public/assets/css/rtl.css
@@ -5205,7 +5205,7 @@ textarea {
   border-radius: 4px;
 }
 
-.search .search__button {
+.search__button {
   color: #999;
   float: left;
   margin: 8px 0 0 0;
@@ -5213,16 +5213,16 @@ textarea {
 }
 
 @media only screen and (min-width: 768px) {
-  .search .search__button {
+  .search__button {
     display: none;
   }
 }
 
-.search .search__button:hover {
+.search__button:hover {
   color: #ccc;
 }
 
-.search .search__container {
+.search__container {
   clear: both;
   display: none;
   cursor: text;
@@ -5235,7 +5235,7 @@ textarea {
 }
 
 @media only screen and (min-width: 768px) {
-  .search .search__container {
+  .search__container {
     float: left;
     display: block;
     width: 35%;
@@ -5244,7 +5244,7 @@ textarea {
   }
 }
 
-.search .search__container .search__label {
+.search__label {
   cursor: text;
 }
 
@@ -5257,7 +5257,7 @@ textarea {
   outline: 0;
 }
 
-.search .search__controls {
+.search__controls {
   width: 24%;
   text-align: left;
   float: left;
@@ -5265,8 +5265,7 @@ textarea {
   box-sizing: border-box;
 }
 
-.search .search__submit,
-.search .search__advanced {
+.search__submit, .search__advanced {
   height: 24px;
   margin: 0;
   padding: 0;
@@ -5277,8 +5276,7 @@ textarea {
   color: #999;
 }
 
-.search .search__submit:hover,
-.search .search__advanced:hover {
+.search__submit:hover, .search__advanced:hover {
   color: #666;
 }
 
