Fixing advanced search link color
Possible to-do: streamline sass for link colors?

--- a/public/assets/css/rtl.css
+++ b/public/assets/css/rtl.css
@@ -5276,7 +5276,11 @@ textarea {
   color: #999;
 }
 
-.search__submit:hover, .search__advanced:hover {
+.search__submit:link, .search__submit:visited, .search__advanced:link, .search__advanced:visited {
+  color: #999;
+}
+
+.search__submit:hover, .search__submit:active, .search__advanced:hover, .search__advanced:active {
   color: #666;
 }
 
