--- a/resources/assets/sass/layout/_global-search.scss
+++ b/resources/assets/sass/layout/_global-search.scss
@@ -67,7 +67,13 @@
         font-size: 14px;
         color: $alt-font-color-2;
 
-        &:hover {
+        &:link,
+        &:visited {
+            color: $alt-font-color-2;
+        }
+
+        &:hover,
+        &:active {
             color: $alt-font-color-1;
         }
     }
